# borrow-checker

./: .clippy.toml  .editorconfig  .envrc  .gitignore  .rustfmt.toml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ROADMAP.md  biome.json  committed.toml  mise.toml  prek.toml  release-plz.toml  scratch.rs
crates/bc-app/: Cargo.toml
crates/bc-app/src/: main.rs
crates/bc-cli/: Cargo.toml
crates/bc-cli/src/: cli.rs  commands.rs  context.rs  error.rs  logging.rs  main.rs  output.rs
crates/bc-cli/src/commands/: account.rs  asset.rs  budget.rs  completions.rs  export.rs  import.rs  mod.rs  plugin.rs  report.rs  transaction.rs
crates/bc-cli/tests/cli/: account.rs  asset.rs  budget.rs  common.rs  export.rs  help.rs  import.rs  main.rs  report.rs  transaction.rs  version.rs
crates/bc-cli/tests/cli/snapshots/: cli__account__archive_existing_account.snap  cli__account__archive_nonexistent_returns_error.snap  cli__account__create_account_json.snap  cli__account__create_asset_account.snap  cli__account__create_then_list.snap  cli__account__list_empty.snap  cli__account__list_empty_json.snap  cli__asset__amortization_shows_schedule.snap  cli__asset__depreciate_no_policy_returns_error.snap  cli__asset__depreciate_wrong_account_kind_fails.snap  cli__asset__record_valuation_happy_path.snap  cli__asset__record_valuation_wrong_account_kind_fails.snap  cli__asset__set_loan_terms_happy_path.snap  cli__asset__set_loan_terms_wrong_account_kind_fails.snap  cli__budget__list_envelopes_empty.snap  cli__export__export_beancount_not_implemented.snap  cli__export__export_beancount_with_data.snap  cli__export__export_ledger_empty_db.snap  cli__export__export_ledger_not_implemented.snap  cli__export__export_ledger_with_data.snap  cli__help__stub_commands@budget_status.snap  cli__help__stub_commands@plugin_list.snap  cli__help__subcommand_help@account.snap  cli__help__subcommand_help@budget.snap  cli__help__subcommand_help@completions.snap  cli__help__subcommand_help@export.snap  cli__help__subcommand_help@import.snap  cli__help__subcommand_help@plugin.snap  cli__help__subcommand_help@report.snap  cli__help__subcommand_help@transaction.snap  (+22 more)
crates/bc-config/: CHANGELOG.md  Cargo.toml
crates/bc-config/src/: lib.rs
crates/bc-core/: CHANGELOG.md  Cargo.toml
crates/bc-core/migrations/: 0001_create_events.sql  0002_create_accounts.sql  0003_create_transactions.sql  0004_create_balances.sql  0005_create_meta.sql  0006_add_account_kind.sql  0007_add_indexes.sql  0008_create_import_profiles.sql  0009_add_asset_acquisition_fields.sql  0009_add_dedup_strategy_to_import_profiles.sql  0009_create_envelopes.sql  0010_add_posting_envelope.sql  0010_create_asset_valuations.sql  0011_add_envelope_commodity.sql  0011_create_asset_depreciations.sql  0012_create_loan_terms.sql  0013_add_loan_compounding.sql  0014_create_loan_offset_accounts.sql  README.md
crates/bc-core/src/: account.rs  asset.rs  balance.rs  budget.rs  db.rs  envelope.rs  error.rs  events.rs  export.rs  import.rs  import_profile.rs  lib.rs  loan.rs  registry.rs  settings.rs  transaction.rs
crates/bc-core/src/import/: profile.rs  registry.rs
crates/bc-format-beancount/: CHANGELOG.md  Cargo.toml
crates/bc-format-beancount/src/: ast.rs  exporter.rs  importer.rs  lib.rs  parser.rs  writer.rs
crates/bc-format-beancount/tests/: integration.rs
crates/bc-format-beancount/tests/fixtures/: basic.beancount
crates/bc-format-csv/: CHANGELOG.md  Cargo.toml
crates/bc-format-csv/src/: config.rs  importer.rs  lib.rs  preamble.rs
crates/bc-format-csv/tests/: integration.rs
crates/bc-format-csv/tests/fixtures/: bank_preamble.csv  debit_credit.csv  simple.csv
crates/bc-format-ledger/: CHANGELOG.md  Cargo.toml
crates/bc-format-ledger-export/: Cargo.toml
crates/bc-format-ledger-export/src/: lib.rs
crates/bc-format-ledger/src/: ast.rs  exporter.rs  importer.rs  lib.rs  parser.rs  writer.rs
crates/bc-format-ledger/tests/: integration.rs
crates/bc-format-ledger/tests/fixtures/: basic.ledger  elided_amount.ledger
crates/bc-format-ofx/: CHANGELOG.md  Cargo.toml
crates/bc-format-ofx/src/: ast.rs  importer.rs  lib.rs  parser.rs  sgml.rs
crates/bc-format-ofx/tests/: integration.rs
crates/bc-format-ofx/tests/fixtures/: basic_v1.ofx  basic_v2.ofx
crates/bc-logging/: Cargo.toml
crates/bc-logging/src/: lib.rs
crates/bc-models/: CHANGELOG.md  Cargo.toml
crates/bc-models/src/: account.rs  budget_window.rs  commodity.rs  envelope.rs  event.rs  ids.rs  import_batch.rs  lib.rs  loan.rs  money.rs  period.rs  profile.rs  settings.rs  tag.rs  transaction.rs  valuation.rs
crates/bc-otel/: CHANGELOG.md  Cargo.toml
crates/bc-otel/src/: lib.rs
crates/bc-plugins/: CHANGELOG.md  Cargo.toml
crates/bc-plugins/src/: host.rs  lib.rs  manifest.rs  plugin_importer.rs  registry.rs  translate.rs
crates/bc-plugins/tests/: integration.rs
crates/bc-sdk/: CHANGELOG.md  Cargo.toml
crates/bc-sdk-macros/: CHANGELOG.md  Cargo.toml
crates/bc-sdk-macros/src/: lib.rs
crates/bc-sdk-macros/tests/: importer_macro.rs
crates/bc-sdk/src/: lib.rs  log.rs  types.rs
crates/bc-sdk/tests/: importer_macro.rs
crates/bc-sdk/wit/: importer.wit
crates/bc-tui/: Cargo.toml
crates/bc-tui/src/: app.rs  chrome.rs  context.rs  id.rs  lib.rs  main.rs  mode.rs  msg.rs  screen.rs
crates/bc-tui/src/chrome/: help_overlay.rs  status_bar.rs  tab_bar.rs
crates/bc-tui/src/screen/: accounts.rs  budget.rs  reports.rs
crates/bc-tui/tests/: integration.rs  snapshot_tests.rs
crates/bc-tui/tests/common/: mod.rs
crates/bc-tui/tests/snapshots/: snapshot_tests__tests__account_sidebar_empty.snap  snapshot_tests__tests__account_sidebar_with_accounts.snap  snapshot_tests__tests__transaction_list_empty.snap  snapshot_tests__tests__transaction_list_with_data.snap
docs/: DESIGN.md
plugins/beancount/: Cargo.toml  plugin.toml
plugins/beancount/src/: ast.rs  lib.rs  parser.rs
plugins/csv/: Cargo.toml  plugin.toml
plugins/csv/src/: config.rs  lib.rs  preamble.rs
plugins/ofx/: Cargo.toml  plugin.toml
plugins/ofx/src/: ast.rs  lib.rs  parser.rs
(+26 files in other folders)
