#:schema https://json.schemastore.org/cargo.json

[workspace]
resolver = "2"
members  = [
  "crates/bc-app",
  "crates/bc-cli",
  "crates/bc-config",
  "crates/bc-core",
  "crates/bc-format-beancount",
  "crates/bc-format-csv",
  "crates/bc-format-ledger",
  "crates/bc-format-ofx",
  "crates/bc-models",
  "crates/bc-otel",
  "crates/bc-plugins",
  "crates/bc-sdk",
  "crates/bc-tui",
]

  [workspace.package]
  version      = "0.1.0"
  edition      = "2024"
  rust-version = "1.85"
  homepage     = "https://github.com/JP-Ellis/borrow-checker"
  repository   = "https://github.com/JP-Ellis/borrow-checker"
  license      = "MIT"

  [workspace.dependencies]
  # Internal crates — reference as `bc-models.workspace = true` in member Cargo.tomls
  bc-config           = { path = "crates/bc-config" }
  bc-core             = { path = "crates/bc-core" }
  bc-format-beancount = { path = "crates/bc-format-beancount" }
  bc-format-csv       = { path = "crates/bc-format-csv" }
  bc-format-ledger    = { path = "crates/bc-format-ledger" }
  bc-format-ofx       = { path = "crates/bc-format-ofx" }
  bc-models           = { path = "crates/bc-models" }
  bc-otel             = { path = "crates/bc-otel" }
  bc-plugins          = { path = "crates/bc-plugins" }
  bc-sdk              = { path = "crates/bc-sdk" }

  # External — shared across crates
  bon                   = "3"
  config                = { version = "0.15", default-features = false, features = [
    "toml"
  ] }
  csv                   = "1"
  directories           = "6"
  insta                 = { version = "1", features = [
    "filters",
    "json",
    "redactions"
  ] }
  jiff                  = { version = "0.2", features = ["serde"] }
  mti                   = { version = "1.1", features = ["serde"] }
  opentelemetry         = "0.31"
  opentelemetry-otlp    = "0.31"
  opentelemetry_sdk     = "0.31"
  pretty_assertions     = { version = "1", features = ["unstable"] }
  quick-xml             = "0.37"
  rust_decimal          = { version = "1", features = ["serde-with-str"] }
  rust_decimal_macros   = "1"
  rusty-money           = { version = "0.5", features = ["iso", "serde"] }
  serde                 = { version = "1", features = ["derive"] }
  serde_json            = "1"
  sqlx                  = { version = "0.9.0-alpha.1", features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite"
  ] }
  thiserror             = "2"
  tokio                 = { version = "1", features = ["full"] }
  tracing               = "0.1"
  tracing-opentelemetry = { version = "0.32" }
  tracing-subscriber    = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json"
  ] }
  winnow                = "0.6"

  ## ----------------------------------------
  ## MARK: Lints
  ## ----------------------------------------
  [workspace.lints]
  # Opt-out approach: all groups are enabled at warn, then individual lints that
  # don't fit the project are explicitly allowed.

    [workspace.lints.rust]
    # See https://doc.rust-lang.org/rustc/lints/groups.html
    # and `rustc -W help` for the full list of built-in lints

    deprecated-safe                            = "warn"
    future-incompatible                        = "warn"
    keyword-idents                             = "warn"
    let-underscore                             = "warn"
    missing_docs                               = "warn"
    nonstandard-style                          = "warn"
    refining-impl-trait                        = "warn"
    unknown-or-malformed-diagnostic-attributes = "warn"
    unused                                     = "warn"
    warnings                                   = "warn"

    [workspace.lints.rustdoc]
    # See: https://doc.rust-lang.org/rustdoc/lints.html
    missing-crate-level-docs = "warn"
    private-doc-tests        = "warn"

    [workspace.lints.clippy]
    # Enable all groups at lower priority so individual lints can override
    cargo       = { level = "warn", priority = -1 }
    complexity  = { level = "warn", priority = -1 }
    correctness = { level = "warn", priority = -1 }
    pedantic    = { level = "warn", priority = -1 }
    perf        = { level = "warn", priority = -1 }
    restriction = { level = "warn", priority = -1 }
    style       = { level = "warn", priority = -1 }
    suspicious  = { level = "warn", priority = -1 }

    # Restriction lints: opt-in group; silence the meta-lint since we're using it
    blanket-clippy-restriction-lints = "allow"

    alloc_instead_of_core          = "allow"  # prefer std::collections over core; alloc crate not used directly
    arbitrary_source_item_ordering = "allow"  # item order is left to author discretion
    cargo_common_metadata          = "allow"  # workspace-level metadata fields are intentionally omitted
    cognitive_complexity           = "allow"  # complexity is managed via code review, not a numeric threshold
    else_if_without_else           = "allow"  # final else branches are often unnecessary noise
    impl_trait_in_params           = "allow"  # `impl Trait` in fn params is idiomatic for simple bounds
    implicit_return                = "allow"  # Rust's implicit return is idiomatic; explicit `return` is reserved for early exits
    min_ident_chars                = "allow"  # single-letter names (e.g. `i`, `n`) are fine in tight scopes
    missing_trait_methods          = "allow"  # partial trait implementations with provided defaults are intentional
    multiple_crate_versions        = "allow"  # duplicate transitive deps are unavoidable in a large workspace
    non_ascii_literal              = "allow"  # Unicode string literals are used for currency symbols and display text
    pattern_type_mismatch          = "allow"  # match ergonomics (auto-ref in patterns) is standard Rust style
    pub_with_shorthand             = "allow"  # `pub(crate)` shorthand is preferred over `pub(in crate)`
    question_mark_used             = "allow"  # `?` for error propagation is idiomatic Rust
    ref_patterns                   = "allow"  # `ref` in patterns is occasionally needed for complex destructuring
    self_named_module_files        = "allow"  # module file layout uses `mod.rs` convention in some crates
    separated_literal_suffix       = "allow"  # `1_u32` style is preferred over `1u32` for readability
    single_call_fn                 = "allow"  # helper functions aid readability even when called once
    single_char_lifetime_names     = "allow"  # `'a`, `'b` lifetime names are standard for short-lived generics
    std_instead_of_alloc           = "allow"  # `std::` is used throughout; alloc-only builds are not a goal
    unreachable                    = "allow"  # `unreachable!()` is used to mark logically impossible branches

    # Known upstream issues — revisit when fixed
    # https://github.com/rust-lang/rust-clippy/issues/14056
    panic_in_result_fn = "allow"
