#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-app"
description = "BorrowChecker desktop GUI (Tauri)"

version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

publish = false

# Full Tauri wiring (tauri-build, build.rs, tauri.conf.json, frontend) added in Milestone 7.
# Plain binary here so the workspace compiles without Tauri system dependencies.

[dependencies]
bc-core   = { workspace = true }
bc-models = { workspace = true }

[lints]
workspace = true
