#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-cli"
description = "BorrowChecker command-line interface"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

publish = false  # distributed as binary, not via crates.io

  [package.metadata]
    [package.metadata.cargo-machete]
    # Stub crate — deps are forward-declared for CLI implementation
    ignored = ["bc-core", "bc-models"]

[dependencies]
bc-core   = { workspace = true }
bc-models = { workspace = true }

[lints]
workspace = true
