#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-cli"
description = "BorrowChecker command-line interface"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

publish = false  # distributed as binary, not via crates.io

  [package.metadata.cargo-machete]
  # All dependencies are actively used; no ignores needed.
  ignored = []

[[bin]]
name = "borrow-checker"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli/main.rs"

[dependencies]
bc-config                  = { workspace = true }
bc-core                    = { workspace = true }
bc-format-beancount-export = { workspace = true }
bc-format-ledger-export    = { workspace = true }
bc-models                  = { workspace = true }
bc-otel                    = { workspace = true }
bc-plugins                 = { workspace = true }
clap                       = { workspace = true }
clap_complete              = { workspace = true }
comfy-table                = { workspace = true }
directories                = { workspace = true }
jiff                       = { workspace = true }
owo-colors                 = { workspace = true }
rust_decimal               = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }

[dev-dependencies]
assert_cmd        = { workspace = true }
assert_fs         = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
regex             = { workspace = true }
rstest            = { workspace = true }

[lints]
workspace = true
