#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-core"
description = "BorrowChecker core engine: event log, SQLite projections, business logic"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

[dependencies]
bc-models    = { workspace = true }
jiff         = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio               = { workspace = true }

[lints]
workspace = true
