#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-format-csv"
description = "CSV import for BorrowChecker (configurable column mapping)"

version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
bc-core   = { workspace = true }
bc-models = { workspace = true }

[lints]
workspace = true
