#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-format-ledger-export"
description = "Ledger file export (write) for BorrowChecker"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

  [package.metadata.cargo-machete]
  # rust_decimal is a transitive requirement of the `dec!` macro used in tests
  ignored = ["rust_decimal"]

[dependencies]
bc-core      = { workspace = true }
bc-models    = { workspace = true }
jiff         = { workspace = true }
rust_decimal = { workspace = true }

[lints]
workspace = true
