#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-format-ledger"
description = "Ledger import format for BorrowChecker"

version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true
