#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-format-ofx"
description = "OFX/QFX import for BorrowChecker"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

[dependencies]
bc-core      = { workspace = true }
bc-models    = { workspace = true }
jiff         = { workspace = true }
quick-xml    = { workspace = true }
rust_decimal = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
pretty_assertions   = { workspace = true }
rust_decimal_macros = { workspace = true }

[lints]
workspace = true
