#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-models"
description = "Shared domain types for BorrowChecker"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

[lints]
workspace = true
