#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-models"
description = "Shared domain types for BorrowChecker"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

[dependencies]
jiff         = { workspace = true }
mti          = { workspace = true }
rust_decimal = { workspace = true }
rusty-money  = { workspace = true }
serde        = { workspace = true }

[dev-dependencies]
pretty_assertions   = { workspace = true }
rust_decimal_macros = { workspace = true }

[lints]
workspace = true
