#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-plugins"
description = "WASM host runtime and plugin ABI bridge for BorrowChecker"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

  [package.metadata]
    [package.metadata.cargo-machete]
    # Stub crate — deps are forward-declared for Milestone 6 (WASM plugin host)
    ignored = ["bc-core", "bc-models"]

[dependencies]
bc-core   = { workspace = true }
bc-models = { workspace = true }

[lints]
workspace = true
