#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-plugins"
description = "WASM host runtime and plugin ABI bridge for BorrowChecker"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

[dependencies]
bc-core      = { workspace = true }
bc-models    = { workspace = true }
jiff         = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
wasmtime     = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }

[lints]
workspace = true
