#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-sdk-macros"
description = "Proc-macro support for bc-sdk — the #[importer] attribute macro"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }

[lints]
workspace = true
