#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-tui"
description = "BorrowChecker terminal user interface"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

publish = false

  [package.metadata]
    [package.metadata.cargo-machete]
    # Stub crate — deps are forward-declared for TUI implementation
    ignored = ["bc-core", "bc-models"]

[dependencies]
bc-core   = { workspace = true }
bc-models = { workspace = true }

[lints]
workspace = true
