#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-tui"
description = "BorrowChecker terminal user interface"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

publish = false

  [package.metadata]
    [package.metadata.cargo-machete]
    # Deps are used progressively across Phase 1–4; machete can't see forward.
    ignored = [
      "anyhow",
      "assert_fs",
      "bc-core",
      "bc-models",
      "crossterm",
      "pretty_assertions",
      "ratatui-macros",
      "tokio",
      "tui-realm-stdlib",
      "tuirealm",
    ]

[[bin]]
name = "borrow-checker-tui"
path = "src/main.rs"

[dependencies]
anyhow           = "1"
bc-core          = { workspace = true }
bc-models        = { workspace = true }
crossterm        = "0.28"
ratatui-macros   = "0.7"
tokio            = { workspace = true, features = ["macros", "rt-multi-thread"] }
tui-realm-stdlib = "3"
tuirealm         = "3"

[dev-dependencies]
assert_fs         = { workspace = true }
pretty_assertions = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
