#:schema https://json.schemastore.org/cargo.json

[package]
name        = "bc-tui"
description = "BorrowChecker terminal user interface"

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
repository.workspace   = true
license.workspace      = true

publish = false

  [package.metadata]
    [package.metadata.cargo-machete]
    # Deps are used progressively across Phase 1–4; machete can't see forward.
    ignored = [
      "anyhow",
      "assert_fs",
      "bc-config",
      "bc-core",
      "bc-models",
      "bc-otel",
      "crossterm",
      "pretty_assertions",
      "ratatui-macros",
      "rust_decimal",
      "tokio",
      "tracing",
      "tracing-subscriber",
      "tui-input",
      "tui-realm-stdlib",
      "tui-tree-widget",
      "tuirealm",
    ]

[[bin]]
name = "borrow-checker-tui"
path = "src/bin/borrow-checker-tui.rs"

[dependencies]
anyhow             = "1"
bc-config          = { workspace = true }
bc-core            = { workspace = true }
bc-models          = { workspace = true }
bc-otel            = { workspace = true }
clap               = { workspace = true }
crossterm          = "0.29"
jiff               = { workspace = true }
ratatui-macros     = "0.7"
tokio              = { workspace = true, features = [
  "macros",
  "rt-multi-thread"
] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tui-input          = "0.11"
tui-realm-stdlib   = "3"
tui-tree-widget    = "0.22"
tuirealm           = "3"

[dev-dependencies]
assert_fs           = { workspace = true }
insta               = { version = "1", features = ["filters"] }
pretty_assertions   = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = { workspace = true }

[lints]
workspace = true
