[package]
name    = "bc-plugin-beancount"
version = "0.1.0"
edition = "2024"

  [package.metadata.bc-plugin]
  name     = "beancount"
  sdk_abi  = 1
  min_host = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bc-sdk       = { path = "../../crates/bc-sdk" }
rust_decimal = "1"

[dev-dependencies]
pretty_assertions   = "=1.4.1"
rust_decimal_macros = "=1.40.0"
