[package]
name    = "bc-plugin-csv"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bc-sdk       = { path = "../../crates/bc-sdk" }
csv          = "1"
jiff         = { version = "0.2" }
rust_decimal = { version = "1", features = ["maths"] }
serde        = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions   = "1"
rust_decimal_macros = "1"
