[package]
name    = "bc-plugin-ofx"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]
# cdylib: wasm32-wasip2 WASM build
# rlib: native test compilation

[dependencies]
bc-sdk       = { path = "../../crates/bc-sdk" }
quick-xml    = "0.39"
rust_decimal = "1"

[dev-dependencies]
pretty_assertions   = "1"
rust_decimal_macros = "1"
